objects/ScCollection_ContractSettings__c.object
<CustomObject>
    <description>This is used to hold the Global Settings count against user and CL/PL Contracts.</description>
    <fields>
        <fullName>ScCollection_BrokenPromiseCountDate__c</fullName>
        <description>this would contain the date</description>
        <label>Broken Promise Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_BrokenPromiseCount__c</fullName>
        <description>this would contain the count of No Commitment Count</description>
        <label>Broken Promise Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_CLContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field contains the tagged CL Contract</description>
        <label>PL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Contract Settings</relationshipLabel>
        <relationshipName>Contract_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Name__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
NOT( ISBLANK(  ScCollection_CLContract__c  ) ) 
, 
 ScCollection_CLContract__r.Name 
, 
IF( 
NOT( ISBLANK(ScCollection_DevContract__c ) ) 
, 
IF( 
ScCollection_DevContract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot; 
, 
left( ScCollection_DevContract__r.Name ,find(&apos;_&apos;, ScCollection_DevContract__r.Name)-1) 
, 
ScCollection_DevContract__r.Name 
) 
, 
&quot;&quot; 
) 
)</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_ContracttoUser__c</fullName>
        <label>Contract to User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Country_Code__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
NOT( ISBLANK( ScCollection_DevContract__c ) ) 
, 
ScCollection_DevContract__r.ScCollection_Country_Code__c 
, 
&quot;&quot; 
)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_DevContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the tagged with Collection contracts with the setting.</description>
        <label>CL Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Contract Settings</relationshipLabel>
        <relationshipName>Contract_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_External_Id__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
AND(NOT( ISBLANK(ScCollection_DevContract__c)),OR( ScCollection_DevContract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;, ScCollection_DevContract__r.ScCollection_Source_System_Name__c == &quot;PAF&quot; ) ) 
, 
ScCollection_DevContract__r.collect__External_ID__c 
, 
&quot;&quot; 
)</formula>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_HoldDaysCount__c</fullName>
        <description>this would contain the count of Hold Days Count</description>
        <label>Hold Days Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_LOB_Identifier__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
NOT( ISBLANK( ScCollection_CLContract__c ) ) 
, 
&quot;CL Loan&quot; 
, 
IF( 
NOT( ISBLANK(ScCollection_DevContract__c ) ) 
, 
ScCollection_DevContract__r.ScCollection_Source_System_Name__c 
, 
&quot;&quot; 
) 
)</formula>
        <label>LOB Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_NoAnsCounterDate__c</fullName>
        <description>this would contain the date</description>
        <label>No Ans Counter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_NoAnswerCount__c</fullName>
        <description>this would contain the count of No answer count</description>
        <label>No Answer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_NoCommitmentCountDate__c</fullName>
        <description>this would contain the date</description>
        <label>No Commitment Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_NoCommitmentCount__c</fullName>
        <description>this would contain the count of No Commitment Count</description>
        <label>No Commitment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Split_Number__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
AND(NOT( ISBLANK( ScCollection_DevContract__c )),ScCollection_DevContract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;)  
, 
TEXT(ScCollection_DevContract__r.ScCollection_Contract_Split_Number__c) 
, 
&quot;&quot; 
)</formula>
        <label>Split Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_UserLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field would contain the look  up of the user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Setting</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>CS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>